--- a/gradle.properties
+++ b/gradle.properties
@@ -18,5 +18,5 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 -XX=MaxPermSize\=512m
 org.gradle.jvmargs=-Xmx5120m
-android.enableAapt2=false
-android.enableD8=true
+#android.enableAapt2=false
+#android.enableD8=true
