--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.cylan.jiafeigou"
     android:versionCode="999"
     android:versionName="888">
@@ -105,7 +106,8 @@
         android:name=".n.base.BaseApplication"
         android:configChanges="locale|orientation|keyboardHidden"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/app_oem_name"
+        tools:replace="android:label"
         android:largeHeap="true"
         android:theme="@style/AppTheme">
 
