--- a/app/build.gradle
+++ b/app/build.gradle
@@ -462,7 +462,7 @@ dependencies {
     compile 'com.trello:rxlifecycle-components:1.0'
     kapt 'com.github.bumptech.glide:compiler:4.3.1'
     compile 'com.github.bumptech.glide:okhttp3-integration:4.3.1'
-    compile 'com.cylan.library:iotsdk:1.1.261' // 留意查看最新的版本号
+//    compile 'com.cylan.library:iotsdk:1.1.261' // 留意查看最新的版本号
 // If you want to use Kotlin syntax with Android Lifecycle
 }
 
