--- a/gradle.properties
+++ b/gradle.properties
@@ -15,8 +15,9 @@
 #Fri Dec 08 17:47:08 CST 2017
 android.useDeprecatedNdk=true
 org.gradle.daemon=true
-org.gradle.parallel=true
+org.gradle.parallel=false
 -XX=MaxPermSize\=512m
 org.gradle.jvmargs=-Xmx5120m
-#android.enableAapt2=false
+android.useAndroidX=false
+android.enableAapt2=false
 #android.enableD8=true
