--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,14 @@ buildscript {
     }
     dependencies {
         //要对应java1.8，2.2.0才能使用unit测试。idea/misc.xml
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        classpath 'me.tatarka:gradle-retrolambda:3.4.0'
+        classpath 'com.android.tools.build:gradle:3.1.4'
+//        classpath 'me.tatarka:gradle-retrolambda:3.4.0'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         //谷歌推送
         classpath 'com.google.gms:google-services:3.1.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.50"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.11"
 //        classpath "io.objectbox:objectbox-gradle-plugin:$objectBoxVersion"
     }
 }
@@ -34,7 +34,7 @@ allprojects {
         }
         maven { url "https://jitpack.io" }
 //        maven { url "http://objectbox.net/beta-repo/" }
-        maven { url "http://yf.cylan.com.cn:82/artifactory/libs-release-local" } // 改为release 地址
+//        maven { url "http://yf.cylan.com.cn:82/artifactory/libs-release-local" } // 改为release 地址
     }
 }
 
